Testimonial Slider slick dots issue on mobile

--- a/public/less/frontend/components/testimonials-v2.less
+++ b/public/less/frontend/components/testimonials-v2.less
@@ -103,11 +103,15 @@
 
 
   .slick-dots {
-    width:inherit;
+    
     bottom: -15px;
 
     @media screen and (min-width: 768px) {
         max-width: 500px;
+    }
+
+    @media screen and (max-width: 767px) {
+        width:100%;
     }
 
   }
